--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/service.css" />
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="css/contact.css" />
     <title>SALES SITE</title>
   </head>
   <body>
@@ -78,51 +78,55 @@
           <button>Go Back Home</button>
         </div>
         <div class="container">
-            <div class="card">
-                <img src="https://via.placeholder.com/300" alt="Card Image">
-                <h3>Card Title 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <button>Read More</button>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/300" alt="Card Image">
-                <h3>Card Title 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <button>Read More</button>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/300" alt="Card Image">
-                <h3>Card Title 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <button>Read More</button>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/300" alt="Card Image">
-                <h3>Card Title 4</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <button>Read More</button>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/300" alt="Card Image">
-                <h3>Card Title 5</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <button>Read More</button>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/300" alt="Card Image">
-                <h3>Card Title 6</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <button>Read More</button>
-            </div>
+          <div class="card">
+            <img src="https://via.placeholder.com/300" alt="Card Image" />
+            <h3>Card Title 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button>Read More</button>
+          </div>
+          <div class="card">
+            <img src="https://via.placeholder.com/300" alt="Card Image" />
+            <h3>Card Title 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button>Read More</button>
+          </div>
+          <div class="card">
+            <img src="https://via.placeholder.com/300" alt="Card Image" />
+            <h3>Card Title 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button>Read More</button>
+          </div>
+          <div class="card">
+            <img src="https://via.placeholder.com/300" alt="Card Image" />
+            <h3>Card Title 4</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button>Read More</button>
+          </div>
+          <div class="card">
+            <img src="https://via.placeholder.com/300" alt="Card Image" />
+            <h3>Card Title 5</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button>Read More</button>
+          </div>
+          <div class="card">
+            <img src="https://via.placeholder.com/300" alt="Card Image" />
+            <h3>Card Title 6</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button>Read More</button>
+          </div>
         </div>
       </aside>
-      
     </section>
     <section id="contact">
       <div class="contact__container">
-        <img src="images/image 1.png" alt="">
+        <div class="img__contact">
+          <img src="images/image 1.png" alt="" />
+        </div>
         <div class="contact__text">
-          
+          <input type="text" />
+          <input type="text" />
+          <input type="text" />
+          <button>Submit</button>
         </div>
       </div>
     </section>
