--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
           <img src="images/image 1.png" alt="" />
         </div>
         <div class="contact__text">
-          <input type="text" />
-          <input type="text" />
-          <input type="text" />
+          <h2>CONTACT US</h2>
+
+          <input placeholder="Your name..." type="text" class="inputs"/>
+          <input placeholder="Your email..." type="email" class="inputs"/>
+          <textarea placeholder="Your message..." class="inputs" rows="5" id=""></textarea>
           <button>Submit</button>
         </div>
       </div>
