changed flex to grid

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/service.css" />
     <link rel="stylesheet" href="css/contact.css" />
-    <title>SALES SITE</title>
+    <title>It's Ed</title>
+    <link rel="icon" type="image/x-icon" href="/images/download.jpg" />
   </head>
   <body>
     <section id="home">
@@ -30,7 +31,7 @@
           <li><a href="">Services</a></li>
 
           <div class="input__container">
-            <input type="search" />
+            <input type="search" placeholder="Search"/>
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
 
@@ -53,8 +54,8 @@
       <button class="intro__button">Let's Start</button>
     </section>
     <section id="services">
-      <aside>
-        <div class="side__gaming">
+      <!-- <aside> -->
+        <!-- <div class="side__gaming">
           <h2>Gaming Accessories</h2>
           <p>Headset</p>
           <p>Oculus</p>
@@ -94,7 +95,7 @@
 
           <button class="back-home">Go Back Home</button>
         </div>
-      </aside>
+      </aside> -->
       <div class="container">
         <div class="card">
           <img src="https://via.placeholder.com/300" alt="Card Image" />
